---
= Novità
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Scopri le novità delle funzionalità di amministrazione di BlueXP : Gestione delle identità e degli accessi (IAM), connettori, credenziali dei provider di servizi cloud e altro ancora.



== 7 ottobre 2024



=== Gestione delle identità e degli accessi BlueXP 

BlueXP  Identity and Access Management (IAM) è un nuovo modello di gestione delle risorse e degli accessi che sostituisce e migliora le funzionalità precedenti fornite dagli account BlueXP  quando si utilizza BlueXP  in modalità standard.

BlueXP  IAM offre una gestione più granulare delle risorse e delle autorizzazioni:

* Un _organization_ di alto livello consente di gestire l'accesso ai vari _progetti_.
* _Folders_ consente di raggruppare i progetti correlati.
* La gestione avanzata delle risorse consente di associare una risorsa a una o più cartelle o progetti.
+
Ad esempio, è possibile associare un sistema Cloud Volumes ONTAP a più progetti.

* La gestione avanzata degli accessi consente di assegnare un ruolo ai membri a diversi livelli della gerarchia dell'organizzazione.


Questi miglioramenti forniscono un migliore controllo sulle azioni che gli utenti possono eseguire e sulle risorse a cui possono accedere.



==== In che modo BlueXP  IAM influisce sul tuo account esistente

Quando accedi a BlueXP , noterai queste modifiche:

* Il tuo _account_ è ora chiamato _organizzazione_
* Le _aree di lavoro_ sono ora chiamate _progetti_
* I nomi dei ruoli utente sono cambiati:
+
** _Account admin_ è ora _Organization admin_
** _Workspace admin_ è ora _cartella o project admin_
** _Compliance Viewer_ è ora _Classification Viewer_


* In Impostazioni, è possibile accedere alla gestione delle identità e degli accessi di BlueXP  per usufruire di questi miglioramenti

